[package]
name = "order_book_imbalance"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["full"] }
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
