[package]
name = "order_book_imbalance"
version = "0.1.0"
edition = "2024"
default-run = "order_book_imbalance"

[[bin]]
name = "order_book_imbalance"
path = "src/main.rs"

[[bin]]
name = "read_snapshot"
path = "src/bin/read_snapshot.rs"

[dependencies]
arrow = "55.2.0"
chrono = "0.4.41"
clap = { version = "4.5.41", features = ["derive"] }
futures-util = "0.3.31"
parquet = "55.2.0"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["full"] }
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
