[package]
name = "order_book_imbalance"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.41", features = ["derive"] }
env_logger = "0.11.8"
futures-util = "0.3.31"
log = "0.4.27"
ordered-float = "5.0.0"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
